Changes - change version laravel to laravel 8 - adding department_id from type_id in resgister of complaint
